--- a/pom.xml
+++ b/pom.xml
@@ -68,6 +68,14 @@
 			<artifactId>commons-logging</artifactId>
 			<version>1.1.1</version>
 		</dependency>
+
+		<dependency>
+			<groupId>dom4j</groupId>
+			<artifactId>dom4j</artifactId>
+			<version>1.4</version>
+		</dependency>
+
+
 	</dependencies>
 	<build>
 		<finalName>HY</finalName>
