--- a/pom.xml
+++ b/pom.xml
@@ -74,6 +74,11 @@
 			<artifactId>dom4j</artifactId>
 			<version>1.4</version>
 		</dependency>
+		<dependency>
+			<groupId>org.slf4j</groupId>
+			<artifactId>slf4j-jcl</artifactId>
+			<version>1.7.12</version>
+		</dependency>
 
 
 	</dependencies>
